Avoid wrapping div on sync status lozenge

--- a/packages/block-editor/src/components/block-card/style.scss
+++ b/packages/block-editor/src/components/block-card/style.scss
@@ -20,15 +20,13 @@
 .block-editor-block-card__sync-status {
 	margin-block-start: $grid-unit-05;
 	margin-block-end: $grid-unit-15;
-
-	span {
-		display: inline-block;
-		color: #fff;
-		background-color: var(--wp-block-synced-color);
-		padding: 3px 6px;
-		font-size: 0.9em;
-		border-radius: $radius-block-ui;
-	}
+	display: block;
+	width: min-content;
+	color: #fff;
+	background-color: var(--wp-block-synced-color);
+	padding: 3px 6px;
+	font-size: 0.9em;
+	border-radius: $radius-block-ui;
 }
 
 .block-editor-block-card__description {
